provision_locust_nest/security/security.tf
resource "aws_security_group" "locust_default" {
    name = "locust_security_group"
    description = "Main security group for Locust instances in public subnet"
    vpc_id = "${var.vpc_id}"

    ingress {
        from_port = 5558
        to_port = 5558
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        self = true
    }

    ingress {
        from_port = 5557
        to_port = 5557
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        self = true
    }

    ingress {
        from_port = 8089
        to_port = 8089
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = "${var.ingress_allow_cidr}"
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags {
        Name = "Locust Swarm default security group"
    }
}
